fix spacing on several sections

--- a/assets/styl/media/980.styl
+++ b/assets/styl/media/980.styl
@@ -22,6 +22,7 @@ body
       w 45%
       bl 1px solid bc
     div.notes
+      clear none
       w 35%
       bl 1px solid bc
       p
